feat: 당첨 통계, 총 수익률 구현